attribute link new tab

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <a class="navbar__link" href="tarifs.html">Tarifs</a>
         </div>
       </div>
-      <a class="btn btn-black" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes"
+      <a class="btn btn-black" target="_blank" rel="noopener noreferrer" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes"
         aria-label="Prendre rendez-vous en ligne">Rdv en ligne</a>
       <button class="menu"><img class="menu__img" src="./assets/images/menu.svg" alt="Icone Menu"></button>
       <button class="menu-close test"><img class="menu__img" src="./assets/images/close.svg" alt="Icone Menu"></button>
@@ -349,7 +349,7 @@
         <p class="footer__wrapper__para">Prise en charge des nourissons, enfants, femmes enceintes, adultes, sportfis,
           personnes agées.
           Consultations uniquement sur rendez vous.</p>
-        <button class="btn btn-light">Prendre rendez-vous</button>
+        <a class="btn btn-light" target="_blank" rel="noopener noreferrer" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
       </article>
       <div class="footer__wrapper__consultation">
         <div class="footer__wrapper__consultation__btns">
