--- a/osteopathe-bruges.html
+++ b/osteopathe-bruges.html
@@ -89,7 +89,7 @@
           <a class="navbar__link" href="tarifs.html">Tarifs</a>
         </div>
       </div>
-      <a class="btn btn-black" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes"
+      <a class="btn btn-black" target="_blank" rel="noopener noreferrer" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes"
         aria-label="Prendre rendez-vous en ligne">Rdv en ligne</a>
       <button class="menu"><img class="menu__img" src="./assets/images/menu.svg" alt="Icone Menu"></button>
       <button class="menu-close test"><img class="menu__img" src="./assets/images/close.svg" alt="Icone Menu"></button>
@@ -118,11 +118,11 @@
   
           <article class="article__wrapper">
             <h2 class="article__wrapper__title">Parcours Professionnel</h2>
-            <p class="article__wrapper__text">Diplômé en <strong>ostéopathie</strong>, j'ai acquis plus de <strong>15 ans d'expérience</strong> en travaillant avec divers publics, y compris des <strong>athlètes de haut niveau</strong>, des <strong>enfants</strong>, des <strong>adultes</strong> et des <strong>seniors</strong>. J’ai également travaillé avec divers <strong>clubs sportifs de haut niveau</strong> (<a class="link-ext" href="https://tremblayhandball.com/">Tremblay-en-France Handball</a>, <a class="link-ext" href="https://www.facebook.com/p/Marne-La-Vall%C3%A9e-Basket-Val-Maubu%C3%A9e-61553830123844/?locale=fr_FR">MLV Basket</a>, <a class="link-ext" href="https://torcyfoot.footeo.com/">Torcy Football</a>, <a class="link-ext" href="https://www.insep.fr/fr">INSEP</a>, <a class="link-ext" href="https://www.jsa-bmb.fr/">JSA Bordeaux</a>, <a class="link-ext" href="https://www.cdhn.fr/">CDHN</a>) et assuré des consultations en <strong>cabinet</strong> ainsi qu’à <strong>domicile</strong>. Mon parcours inclut aussi de la formation en <strong>entreprise</strong> sur la <strong>prévention des troubles</strong> liés à l'inactivité physique avec <a class="link-ext" href="https://www.atid-consulting.com/">Atid Consulting</a>, enrichissant ainsi mon approche clinique.</p>
-            <p class="article__wrapper__text">En tant qu'enseignant chez <a class="link-ext" href="https://www.eurosteo.com/">Eurosteo</a> (École d'ostéopathie pour professionnels de santé), je suis l'évolution et l'actualité en <strong>traumatologie du sport</strong> et en <strong>prévention des blessures</strong>.</p>
+            <p class="article__wrapper__text">Diplômé en <strong>ostéopathie</strong>, j'ai acquis plus de <strong>15 ans d'expérience</strong> en travaillant avec divers publics, y compris des <strong>athlètes de haut niveau</strong>, des <strong>enfants</strong>, des <strong>adultes</strong> et des <strong>seniors</strong>. J’ai également travaillé avec divers <strong>clubs sportifs de haut niveau</strong> (<a class="link-ext" target="_blank" rel="noopener noreferrer" href="https://tremblayhandball.com/">Tremblay-en-France Handball</a>, <a class="link-ext" target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/p/Marne-La-Vall%C3%A9e-Basket-Val-Maubu%C3%A9e-61553830123844/?locale=fr_FR">MLV Basket</a>, <a class="link-ext" target="_blank" rel="noopener noreferrer" href="https://torcyfoot.footeo.com/">Torcy Football</a>, <a class="link-ext" target="_blank" rel="noopener noreferrer" href="https://www.insep.fr/fr">INSEP</a>, <a class="link-ext" target="_blank" rel="noopener noreferrer" href="https://www.jsa-bmb.fr/">JSA Bordeaux</a>, <a class="link-ext" target="_blank" rel="noopener noreferrer" href="https://www.cdhn.fr/">CDHN</a>) et assuré des consultations en <strong>cabinet</strong> ainsi qu’à <strong>domicile</strong>. Mon parcours inclut aussi de la formation en <strong>entreprise</strong> sur la <strong>prévention des troubles</strong> liés à l'inactivité physique avec <a class="link-ext" target="_blank" rel="noopener noreferrer" href="https://www.atid-consulting.com/">Atid Consulting</a>, enrichissant ainsi mon approche clinique.</p>
+            <p class="article__wrapper__text">En tant qu'enseignant chez <a class="link-ext" target="_blank" rel="noopener noreferrer" href="https://www.eurosteo.com/">Eurosteo</a> (École d'ostéopathie pour professionnels de santé), je suis l'évolution et l'actualité en <strong>traumatologie du sport</strong> et en <strong>prévention des blessures</strong>.</p>
           </article>
         </div>
-        <img data-aos="fade-left" class="article__wrapper__img" loading="lazy" src="./assets/images/osteo1.webp" alt="ostéopathe Henrique Nunes" >
+        <img data-aos="fade-left" class="article__wrapper__img article__wrapper__img--osteo" loading="lazy" src="./assets/images/osteo1.webp" alt="ostéopathe Henrique Nunes" >
       </div>
   
       <article class="article__wrapper">
@@ -180,7 +180,7 @@
       <img class="banner__img" src="./assets/images/banner-seance-osteopathie.webp" loading="lazy" alt="Séance d'ostéopathie">
       <div class="banner__wrapper">
         <h3 class="banner__title">Faites le premier pas vers un corps en pleine forme.</h3>
-        <a class="btn btn-light btn-xl" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
+        <a class="btn btn-light btn-xl" target="_blank" rel="noopener noreferrer"  href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
       </div>
     </section>
   
@@ -196,7 +196,7 @@
         <p class="footer__wrapper__para">Prise en charge des nourissons, enfants, femmes enceintes, adultes, sportfis,
           personnes agées.
           Consultations uniquement sur rendez vous.</p>
-        <button class="btn btn-light">Prendre rendez-vous</button>
+        <a class="btn btn-light" target="_blank" rel="noopener noreferrer" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
       </article>
       <div class="footer__wrapper__consultation">
         <div class="footer__wrapper__consultation__btns">
