--- a/tarifs.html
+++ b/tarifs.html
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <a class="btn btn-black" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes"
-                    aria-label="Prendre rendez-vous en ligne">Rdv en ligne</a>
+                target="_blank" rel="noopener noreferrer" aria-label="Prendre rendez-vous en ligne">Rdv en ligne</a>
                 <button class="menu"><img class="menu__img" src="./assets/images/menu.svg" alt="Icone Menu"></button>
                 <button class="menu-close test"><img class="menu__img" src="./assets/images/close.svg"
                         alt="Icone Menu"></button>
@@ -165,7 +165,14 @@
                     <strong>accident</strong> dont vous avez été victime.</p>
             </article>
         </div>
-
+        <section class="banner">
+            <img class="banner__img" src="./assets/images/banner-seance-osteopathie.webp" loading="lazy" alt="Séance d'ostéopathie">
+            <div class="banner__wrapper">
+              <h3 class="banner__title">Faites le premier pas vers un corps en pleine forme.</h3>
+              <a class="btn btn-light btn-xl" target="_blank" rel="noopener noreferrer" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
+      
+            </div>
+          </section>
 
     </main>
 
@@ -180,7 +187,8 @@
                     sportfis,
                     personnes agées.
                     Consultations uniquement sur rendez vous.</p>
-                <button class="btn btn-light">Prendre rendez-vous</button>
+                <a class="btn btn-light" target="_blank" rel="noopener noreferrer" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
+
             </article>
             <div class="footer__wrapper__consultation">
                 <div class="footer__wrapper__consultation__btns">
