--- a/osteopathe-bruges.html
+++ b/osteopathe-bruges.html
@@ -159,13 +159,39 @@
   
       <article class="article__wrapper">
         <h2 class="article__wrapper__title">Collaboration avec des Clubs Sportifs</h2>
-        <img src="./assets/images/clubs.webp" loading="lazy" alt="Photo des clubs" >
+        <div class="collab-club mw-container">
+          <div class="tooltip-container">
+              <img src="/assets/images/clubs/logo-tremblay.png" alt="Handball Tremblay">
+              <div class="tooltip">Handball Tremblay</div>
+          </div>
+          <div class="tooltip-container">
+              <img src="/assets/images/clubs/logo-mlv.png" alt="Basketball Marne la Vallée">
+              <div class="tooltip">Basketball Marne la Vallée</div>
+          </div>
+          <div class="tooltip-container">
+              <img src="/assets/images/clubs/logo-torcy.png" alt="Football Torcy">
+              <div class="tooltip">Football Torcy</div>
+          </div>
+          <div class="tooltip-container">
+              <img src="/assets/images/clubs/logo-insep.png" alt="INSEP">
+              <div class="tooltip">INSEP</div>
+          </div>
+          <div class="tooltip-container">
+              <img src="/assets/images/clubs/logo-jsa.png" alt="Basketball JSA Bordeaux">
+              <div class="tooltip">Basketball JSA Bordeaux</div>
+          </div>
+          <div class="tooltip-container">
+              <img src="/assets/images/clubs/logo-cdhn.png" alt="Centre de Développement Haut Niveau">
+              <div class="tooltip">Centre de Développement Haut Niveau</div>
+          </div>
+      </div>
       </article>
     </div>
 
     <div class="carousel-container">
       <div class="carousel-track">
-        <div class="carousel-item"><img src="./assets/images/carousel/2016-09-04 15.37.12.jpg" alt="Photo 1"></div>
+        <!-- <div class="carousel-item"><img src="./assets/images/carousel/2016-09-04 15.37.12.jpg" alt="Photo 1"></div> -->
+        <div class="carousel-item"><img src="./assets/images/carousel/resize.jpg" alt="Photo 1"></div>
         <div class="carousel-item"><img src="./assets/images/carousel/20200629_222152000_iOS.jpg" alt="Photo 2"></div>
         <div class="carousel-item"><img src="./assets/images/carousel/20211021_140926000_iOS.jpg" alt="Photo 3"></div>
         <div class="carousel-item"><img src="./assets/images/carousel/GFNC8774.JPG" alt="Photo 4"></div>
