--- a/osteopathe-bruges.html
+++ b/osteopathe-bruges.html
@@ -161,27 +161,27 @@
         <h2 class="article__wrapper__title">Collaboration avec des Clubs Sportifs</h2>
         <div class="collab-club mw-container">
           <div class="tooltip-container">
-              <img src="/assets/images/clubs/logo-tremblay.png" alt="Handball Tremblay">
+              <img src="./assets/images/clubs/logo-tremblay.png" alt="Handball Tremblay">
               <div class="tooltip">Handball Tremblay</div>
           </div>
           <div class="tooltip-container">
-              <img src="/assets/images/clubs/logo-mlv.png" alt="Basketball Marne la Vallée">
+              <img src="./assets/images/clubs/logo-mlv.png" alt="Basketball Marne la Vallée">
               <div class="tooltip">Basketball Marne la Vallée</div>
           </div>
           <div class="tooltip-container">
-              <img src="/assets/images/clubs/logo-torcy.png" alt="Football Torcy">
+              <img src="./assets/images/clubs/logo-torcy.png" alt="Football Torcy">
               <div class="tooltip">Football Torcy</div>
           </div>
           <div class="tooltip-container">
-              <img src="/assets/images/clubs/logo-insep.png" alt="INSEP">
+              <img src="./assets/images/clubs/logo-insep.png" alt="INSEP">
               <div class="tooltip">INSEP</div>
           </div>
           <div class="tooltip-container">
-              <img src="/assets/images/clubs/logo-jsa.png" alt="Basketball JSA Bordeaux">
+              <img src="./assets/images/clubs/logo-jsa.png" alt="Basketball JSA Bordeaux">
               <div class="tooltip">Basketball JSA Bordeaux</div>
           </div>
           <div class="tooltip-container">
-              <img src="/assets/images/clubs/logo-cdhn.png" alt="Centre de Développement Haut Niveau">
+              <img src="./assets/images/clubs/logo-cdhn.png" alt="Centre de Développement Haut Niveau">
               <div class="tooltip">Centre de Développement Haut Niveau</div>
           </div>
       </div>
