--- a/osteopathe-bruges.html
+++ b/osteopathe-bruges.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100..700&family=Josefin+Sans:wght@100..700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="stylesheet/style.css" />
 
@@ -187,20 +189,19 @@
       </div>
       </article>
     </div>
-
-    <div class="carousel-container">
-      <div class="carousel-track">
-        <!-- <div class="carousel-item"><img src="./assets/images/carousel/2016-09-04 15.37.12.jpg" alt="Photo 1"></div> -->
-        <div class="carousel-item"><img src="./assets/images/carousel/resize.jpg" alt="Photo 1"></div>
-        <div class="carousel-item"><img src="./assets/images/carousel/20200629_222152000_iOS.jpg" alt="Photo 2"></div>
-        <div class="carousel-item"><img src="./assets/images/carousel/20211021_140926000_iOS.jpg" alt="Photo 3"></div>
-        <div class="carousel-item"><img src="./assets/images/carousel/GFNC8774.JPG" alt="Photo 4"></div>
-        <div class="carousel-item"><img src="./assets/images/carousel/IMG_1053.JPG" alt="Photo 5"></div>
-        <div class="carousel-item"><img src="./assets/images/carousel/TFHB-PCHB-6914.jpg" alt="Photo 6"></div>
-        <div class="carousel-item"><img src="./assets/images/carousel/TFHB-PCHB-6988.jpg" alt="Photo 6"></div>
-       
-      </div>
-    </div>
+<div class="glide">
+  <div class="glide__track" data-glide-el="track">
+    <ul class="glide__slides">
+      <li class="glide__slide"><img src="./assets/images/carousel/20200629_222152000_iOS.jpg" alt="Photo 1"></li>
+      <li class="glide__slide"><img src="./assets/images/carousel/20211021_140926000_iOS.jpg" alt="Photo 3"></li>
+      <li class="glide__slide"><img src="./assets/images/carousel/GFNC8774.JPG" alt="Photo 4"></li>
+      <li class="glide__slide"><img src="./assets/images/carousel/TFHB-PCHB-6914.jpg" alt="Photo 4"></li>
+      <li class="glide__slide"><img src="./assets/images/carousel/TFHB-PCHB-6988.jpg" alt="Photo 4"></li>
+      <li class="glide__slide"><img src="./assets/images/carousel/IMG_1053.JPG" alt="Photo 4"></li>
+      <li class="glide__slide"><img src="./assets/images/carousel/2016-09-04 15.37.12.jpg" alt="Photo 4"></li>
+    </ul>
+  </div>
+</div>
   
     <section class="banner">
       <img class="banner__img" src="./assets/images/banner-seance-osteopathie.webp" loading="lazy" alt="Séance d'ostéopathie">
@@ -255,6 +256,7 @@
       </div>
     </div>
   </footer>
+<script src="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/glide.min.js"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
  <script type="module" src="js/index.js"></script>
 </body>
